--- a/TruckLink/index.html
+++ b/TruckLink/index.html
@@ -2,45 +2,85 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/Truckio.ico">
+    <link rel="icon" href="/ico.ico">
     <link rel="stylesheet" href="main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TruckLink VTC</title>
   </head>
   <body>
-    <div id="topper">
-      <p>topper</p>
+    <div id="splash" class="elem">
+      <div>
+        <img id="logo" src="/LOGO.png"/>
+        <ul>
+          <li><h1 class="listHeader">What we deliver</h1></li>
+          <li><h3>Single</h3><img class="trucksPng" src="/trucks/singleTrailer.png"/></li>
+          <li><h3>Tankers</h3><img class="trucksPng" src="/trucks/oilTrailer.png"/></li>
+          <li><h3>HCT</h3><img class="trucksPng" src="/trucks/HCTTrailer.png"/></li>
+          <li><h3>Boats</h3><img class="trucksPng" src="/trucks/boatTrailer.png"/></li>
+        </ul>
+      </div>
+      
+      
     </div>
 
-    <div id="info">
-      <p>info</p>
+    <div id="info" class="elem">
+      <div id="infoText">
+        <h1>Information</h1>
+        <br>
+        <h3>Our goal</h3>
+        <br>
+        <p>Here at Trucklink we promise to provide a fast, safe and reliable service to all companies. Our aim is to always strive towards
+          the best delivery standards possible while we link your point A to point B. Customer satisfaction is at the heart of all our 
+          operations; that's why we always keep our live data up to date - we wont hide anything from you. </p>
+        <br>
+        <h3>Where does Trucklink opperate?</h3> 
+        <br>
+        <p>Trucklinks origin is in the UK how ever that doesnt stop us from delivering all across the EU, if you can name it - we can reach it.</p>
+        <br>
+        <h3>Where can i apply?</h3>
+        <br>
+        <p>Trucklink is currently not recruiting.</p>
+      </div>  
     </div>
 
-    <div id="stats">
+    <div id="stats" class="elem">
       <p>stats</p>
     </div>
 
     <div id="graph">
 
-      <div id="deliveryGraph">
+      <div id="deliveryGraph" class="elem">
         <p>delivery Graph</p>
       </div>
 
-      <div id="mileageGraph">
+      <div id="mileageGraph" class="elem">
         <p>mileage Graph</p>
       </div>
 
     </div>
 
-    <div id="liveTrack">
-      <p>live Positions</p>
+    <div id="liveData">
+      <div id="liveTrack" class="elem">
+        <p>Live Positions</p>
+      </div>
+
+      <div id="livePlayerData">
+        <div id="liveOnline" class="elem">
+          <p>Live Online Players</p>
+        </div>
+
+        <div id="liveOnlineData" class="elem">
+          <p>Selected Online Players data</p>
+        </div>
+
+      </div>
     </div>
 
-    <div id="screenshots">
+    <div id="screenshots" class="elem">
       <p>screenshots</p>
     </div>
 
-    <div id="partners">
+    <div id="partners" class="elem">
       <p>partners/footer</p>
     </div>
 
